tests/baselines/reference/VariableDeclaration4_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration4_es6.ts(1,7): error TS1155: 'const' declarations must be initialized.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration4_es6.ts (1 errors) ====
    const a: number
          ~
!!! error TS1155: 'const' declarations must be initialized.